--- a/web.config
+++ b/web.config
@@ -10,6 +10,7 @@ http://msdn2.microsoft.com/en-us/library/b5ysx397.aspx
   <system.web>
     <compilation defaultLanguage="C#" debug="true">
       <assemblies>
+        <add assembly="System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
       </assemblies>
     </compilation>
     <customErrors mode="RemoteOnly">
