--- a/OnlineCompiler.csproj
+++ b/OnlineCompiler.csproj
@@ -88,5 +88,6 @@
     <None Include="bootstrap\fonts\glyphicons-halflings-regular.ttf" />
     <None Include="bootstrap\fonts\glyphicons-halflings-regular.woff" />
     <None Include="bootstrap\fonts\glyphicons-halflings-regular.woff2" />
+    <None Include="README.md" />
   </ItemGroup>
 </Project>
